[tool.poetry]
name = "diurnal-stream"
version = "0.1.0"
description = ""
authors = ["PowerSnail <hj@powersnail.com>"]
readme = "README.md"
packages = [{include = "diurnal_stream.py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"